# picoWmanual

./: README.md  main.tex
ide/: gvv_ard_7447.cpp  ip_inc_dec.ino  sevenseg.cpp
ide/codes/: platformio.ini
ide/codes/src/: main.cpp
picoWAssembly/: README.md
picoWAssembly/7447logicAND/: CMakeLists.txt  mainmem.S
picoWAssembly/7447one/: CMakeLists.txt  mainmem.S
picoWAssembly/cycledelay/: CMakeLists.txt  mainmem.S
picoWAssembly/memory/: CMakeLists.txt  mainmem.S
picoWAssembly/pwm/: CMakeLists.txt  mainmem.S  sdklink.c
picoWAssembly/sevenseg/: CMakeLists.txt  mainmem.S
picoWAssembly/timer/: CMakeLists.txt  timer.S
picoWAssembly/turnonled/: CMakeLists.txt  mainmem.S
